--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         />
         <img src="./assets/images/illustration-sign-up-mobile.svg" alt="" />
       </picture>
-      <div class="mainContent">
+      <section class="mainContent">
 
         <div>
-          <h2>Stay updated!</h2>
+          <h1>Stay updated!</h1>
           <p>Join 60,000+ product managers receiving monthly updates on:</p>
           <div><img src="./assets/images/icon-success.svg" alt=""/><p>Product discovery and building what matters</p></div>
           <div><img src="./assets/images/icon-success.svg" alt=""/><p>Measuring to ensure updates are a success</p></div>
@@ -34,7 +34,7 @@
           <input type="email" id="email" placeholder="email@company.com" />
           <button type="submit">Subscribe to monthly newsletter</button>
       </form>
-      </div>
+      </section>
     </main>
   </body>
 </html>
